Width fix on iPhone

--- a/playground/mobile/less/mobile.less
+++ b/playground/mobile/less/mobile.less
@@ -15,6 +15,18 @@ html {
   padding: 70px 0;
 }
 
+.fixed-container {
+  width: 95%;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 2.5%;
+}
+
+.btn {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 img {
   max-width: 100%;
 }
